--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
           <!-- <b><a href="mailto:hello@bricksassetmanagement.com">hello@bricksassetmanagement.com</a></b> -->
           <div class="mt40">
             <form
-              action="https://fundbricks.us18.list-manage.com/subscribe/post?u=012af4104c16ff7433b941f61&amp;id=a71ffaf85b"
+              action="https://fundbricks.us18.list-manage.com/subscribe/post?u=012af4104c16ff7433b941f61&amp;id=a71ffaf85b&SIGNUP=BamLandingPage"
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
               novalidate="novalidate" class="container-sml mailchimp flex mb20">
               <input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Indtast din email..."
