--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
     section.section.topsection {
       color: #fff !important;
-      height: 90vh;
+      min-height: 90vh;
       display: flex;
       background: #fff;
     }
@@ -358,28 +358,6 @@
       </div>
     </section>
   </div>
-  <!-- <section id="feature-1" class="section custom-color-d1f5c473-4b9d-1e0f-d451-e0021a4d23d0" activepage="Landing">
-      <div class="container-lrg flex">
-        <div class="col-4 text-center flex flex-column center-horizontal"><i class="icon mobile-center-icon secondary-bg"><svg class="svg-fill" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
-              <path d="M20 22.494v1a.5.5 0 0 1-1 0v-1a.5.5 0 1 1 1 0zm-14.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 1 0v-1a.5.5 0 0 0-.5-.5zm7 1a10.924 10.924 0 0 1-2.494-.391l-.27 1.76a.528.528 0 0 0 .097.454.498.498 0 0 0 .387.183h4.56a.5.5 0 0 0 .49-.598l-.275-1.8a10.928 10.928 0 0 1-2.495.392zm9.06-7.44L18 11.995v9h2.5a1.5 1.5 0 0 0 1.5-1.5v-2.879a1.5 1.5 0 0 0-.44-1.06zM17 5.995v15a18.472 18.472 0 0 1-4 .974v-7.474a.5.5 0 0 0-1 0v7.474a18.47 18.47 0 0 1-4-.974v-15C8 3.67 11.553.244 12.5 0c.947.244 4.5 3.67 4.5 5.994zm-2.168 1.127A4.374 4.374 0 0 0 12.5 5.994a4.113 4.113 0 0 0-2.343 1.136.5.5 0 0 0 .686.729 3.213 3.213 0 0 1 1.657-.865 3.417 3.417 0 0 1 1.668.874.5.5 0 0 0 .664-.748zM3 16.614v2.88a1.5 1.5 0 0 0 1.5 1.5H7v-9l-3.56 3.56a1.5 1.5 0 0 0-.44 1.06z"></path>
-            </svg></i>
-          <h3 class="bold primary-color">Højt afkast</h3>
-          <p class="paragraph secondary-color">Launchaco website builder is content driven, which means no matter what you type we pick the best template tailored to your content.</p>
-        </div>
-        <div class="col-4 text-center flex flex-column center-horizontal"><i class="icon mobile-center-icon secondary-bg"><svg class="svg-fill" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
-              <path d="M20 22.494v1a.5.5 0 0 1-1 0v-1a.5.5 0 1 1 1 0zm-14.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 1 0v-1a.5.5 0 0 0-.5-.5zm7 1a10.924 10.924 0 0 1-2.494-.391l-.27 1.76a.528.528 0 0 0 .097.454.498.498 0 0 0 .387.183h4.56a.5.5 0 0 0 .49-.598l-.275-1.8a10.928 10.928 0 0 1-2.495.392zm9.06-7.44L18 11.995v9h2.5a1.5 1.5 0 0 0 1.5-1.5v-2.879a1.5 1.5 0 0 0-.44-1.06zM17 5.995v15a18.472 18.472 0 0 1-4 .974v-7.474a.5.5 0 0 0-1 0v7.474a18.47 18.47 0 0 1-4-.974v-15C8 3.67 11.553.244 12.5 0c.947.244 4.5 3.67 4.5 5.994zm-2.168 1.127A4.374 4.374 0 0 0 12.5 5.994a4.113 4.113 0 0 0-2.343 1.136.5.5 0 0 0 .686.729 3.213 3.213 0 0 1 1.657-.865 3.417 3.417 0 0 1 1.668.874.5.5 0 0 0 .664-.748zM3 16.614v2.88a1.5 1.5 0 0 0 1.5 1.5H7v-9l-3.56 3.56a1.5 1.5 0 0 0-.44 1.06z"></path>
-            </svg></i>
-          <h3 class="bold primary-color">Kort løbetid</h3>
-          <p class="paragraph secondary-color">Launchaco website builder is content driven, which means no matter what you type we pick the best template tailored to your content.</p>
-        </div>
-        <div class="col-4 text-center flex flex-column center-horizontal"><i class="icon mobile-center-icon secondary-bg"><svg class="svg-fill" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
-              <path d="M20 22.494v1a.5.5 0 0 1-1 0v-1a.5.5 0 1 1 1 0zm-14.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 1 0v-1a.5.5 0 0 0-.5-.5zm7 1a10.924 10.924 0 0 1-2.494-.391l-.27 1.76a.528.528 0 0 0 .097.454.498.498 0 0 0 .387.183h4.56a.5.5 0 0 0 .49-.598l-.275-1.8a10.928 10.928 0 0 1-2.495.392zm9.06-7.44L18 11.995v9h2.5a1.5 1.5 0 0 0 1.5-1.5v-2.879a1.5 1.5 0 0 0-.44-1.06zM17 5.995v15a18.472 18.472 0 0 1-4 .974v-7.474a.5.5 0 0 0-1 0v7.474a18.47 18.47 0 0 1-4-.974v-15C8 3.67 11.553.244 12.5 0c.947.244 4.5 3.67 4.5 5.994zm-2.168 1.127A4.374 4.374 0 0 0 12.5 5.994a4.113 4.113 0 0 0-2.343 1.136.5.5 0 0 0 .686.729 3.213 3.213 0 0 1 1.657-.865 3.417 3.417 0 0 1 1.668.874.5.5 0 0 0 .664-.748zM3 16.614v2.88a1.5 1.5 0 0 0 1.5 1.5H7v-9l-3.56 3.56a1.5 1.5 0 0 0-.44 1.06z"></path>
-            </svg></i>
-          <h3 class="bold primary-color">Fokus på byggekredit</h3>
-          <p class="paragraph secondary-color">Launchaco website builder is content driven, which means no matter what you type we pick the best template tailored to your content.</p>
-        </div>
-      </div>
-    </section> -->
   <section id="feature-2" class="section custom-color-d1f5c473-4b9d-1e0f-d451-e0021a4d23d0" activepage="Landing">
     <div class="container-lrg flex">
       <div class="flex col-6 flex-column mobile-text-center center-vertical">
@@ -390,14 +368,12 @@
             </path>
           </svg>
         </i>
-        <h3 class="bold primary-color">
-          Åben investeringsrunde i Bricks Byggekredit Fond I
-        </h3>
         <p class="paragraph secondary-color">
-          Vi søger pt. investorer til Bricks Byggekredit Fond I ApS med et
-          udbudsbeløb på 3 - 10 mio. Investeringen giver et afkast på 10% p.a.
-          og har en løbetid på 15 måneder. Midler fra
-          Virksomhedsskatteordningen, private konti og selskaber kan bruges.
+          Vi søger pt. investorer til Bricks Byggekredit Fond I ApS med et udbudsbeløb på op til 50 mio. kr.
+          Selskabet rejser kapital via udstedelse af konvertible obligationer. <br/><br/>
+          Provenuet fra obligationsudstedelsen anvendes til udlån til en række ejendomsprojekter, 
+          som alle opfylder en række nærmere beskrevne krav til overdækningsgrad/soliditet, størrelse, entrepriseforhold mv. <br/>
+          Midler fra Virksomhedsskatteordningen, private konti og selskaber kan bruges.
           <br /><br />
           Kontakt os for mere information på
           <b><a href="mailto:hello@bricksassetmanagement.com">hello@bricksassetmanagement.com</a></b>
@@ -422,7 +398,7 @@
               d="M7 19.5v4A1.5 1.5 0 0 1 5.5 25h-1A1.5 1.5 0 0 1 3 23.5v-4A1.5 1.5 0 0 1 4.5 18h1A1.5 1.5 0 0 1 7 19.5zm5.5-6.5h-1a1.5 1.5 0 0 0-1.5 1.5v9a1.5 1.5 0 0 0 1.5 1.5h1a1.5 1.5 0 0 0 1.5-1.5v-9a1.5 1.5 0 0 0-1.5-1.5zm7-6h-1A1.5 1.5 0 0 0 17 8.5v15a1.5 1.5 0 0 0 1.5 1.5h1a1.5 1.5 0 0 0 1.5-1.5v-15A1.5 1.5 0 0 0 19.5 7zM21.998.49a.499.499 0 0 0-.024-.12.512.512 0 0 0-.017-.07.507.507 0 0 0-.049-.073.492.492 0 0 0-.063-.086L21.84.13a.485.485 0 0 0-.066-.04.473.473 0 0 0-.092-.055.478.478 0 0 0-.11-.022A.468.468 0 0 0 21.5 0h-4a.5.5 0 0 0 0 1h2.834C13.291 8.21 2.38 13.998 2.268 14.058a.5.5 0 1 0 .464.884C2.848 14.882 13.838 9.052 21 1.75V4.5a.5.5 0 0 0 1 0v-4z">
             </path>
           </svg></i>
-        <h3 class="bold primary-color">Afkast på typisk 10% p.a.</h3>
+        <h3 class="bold primary-color">Afkast på typisk 7% p.a.</h3>
         <p class="paragraph secondary-color">
           Fonden investerer i byggefinansiering til solide, danske
           ejendomsprojekter gennem udlån via FundBricks.com-platformen til en
@@ -435,10 +411,11 @@
               d="M20 19.5a.5.5 0 0 1-.5.5h-14a.5.5 0 0 1 0-1h14a.5.5 0 0 1 .5.5zM16.5 21h-8a.5.5 0 0 0 0 1h8a.5.5 0 0 0 0-1zm5-4h-18a.5.5 0 0 0 0 1h18a.5.5 0 0 0 0-1zm-9-13a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-1 0v1a.5.5 0 0 0 .5.5zM4.368 7.075a.5.5 0 0 0 .707-.707l-.707-.707a.5.5 0 0 0-.707.707zM1.5 14h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm23 0h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm-3.868-6.925l.707-.707a.5.5 0 1 0-.707-.707l-.708.707a.5.5 0 1 0 .708.707zM4.14 16h16.72a8.5 8.5 0 1 0-16.72 0z">
             </path>
           </svg></i>
-        <h3 class="bold primary-color">Løbetid på typisk 15 måneder</h3>
+        <h3 class="bold primary-color">Kort løbetid</h3>
         <p class="paragraph secondary-color">
-          Den typiske runde løber i mellem 12 og 15 måneder sluttende med
-          indfrielse af konvertible obligationer og udbetaling af afkast.
+          Selskabet investerer i byggefinansiering til solide, 
+          danske ejendomsprojekter gennem udlån via FundBricks.com-platformen 
+          til en høj rente og en kort løbetid på typisk 12-18 måneder.
         </p>
       </div>
     </div>
@@ -470,8 +447,7 @@
           Indbetalinger sker til klientkonto hos advokat
         </h3>
         <p class="paragraph secondary-color">
-          Indbetalinger sker direkte til klientkonto hos Moalem Weitemeyer
-          &amp; Bendtsen advokatfirma.
+          Indbetalinger sker direkte til klientkonto hos Brinkmann Kronborg Henriksen Advokatpartnerselskab.
         </p>
       </div>
     </div>
@@ -551,40 +527,10 @@
       </p>
     </div>
     <div class="container flex wrap text-center">
-      <!-- <div class="col-6 mt40 flex">
-        <div class="team-card flex flex-column center-vertical center-horizontal w100">
-          <div class="user-image mb20"
-            style='background-image: url("images/5e59bcb7-75e8-48e9-b09e-a9c38aa3d038.png");'></div>
-          <div>
-            <b class="bold primary-color">Anders Holm-Jensen</b>
-            <p class="paragraph primary-color mt10">Partner</p>
-            <p class="paragraph secondary-color mt20"></p>
-          </div>
-          <div class="mt30">
-            <a href="mailto:ahj@bricksassetmanagement.com" class="socialicons accent-bg email"></a><a
-              href="https://linkedin.com/andholm" target="_blank" class="socialicons accent-bg linkedin"></a>
-          </div>
-        </div>
-      </div>
       <div class="col-6 mt40 flex">
         <div class="team-card flex flex-column center-vertical center-horizontal w100">
           <div class="user-image mb20"
-            style='background-image: url("images/8a230b6a-aac6-4c50-8abc-844e944250b2.png");'></div>
-          <div>
-            <b class="bold primary-color">Thor Mønsted</b>
-            <p class="paragraph primary-color mt10">Partner</p>
-            <p class="paragraph secondary-color mt20"></p>
-          </div>
-          <div class="mt30">
-            <a href="mailto:tm@bricksassetmanagement.com" class="socialicons accent-bg email"></a><a
-              href="https://linkedin.com/thormonsted" target="_blank" class="socialicons accent-bg linkedin"></a>
-          </div>
-        </div>
-      </div> -->
-      <div class="col-6 mt40 flex">
-        <div class="team-card flex flex-column center-vertical center-horizontal w100">
-          <div class="user-image mb20"
-            style='background-image: url("images/aeef4a00-6b66-4205-9949-82f785c34922.png");'></div>
+            style='background-image: url("images/t_sonne.jpeg");'></div>
           <div>
             <b class="bold primary-color">Thomas Sonne-Schmidt</b>
             <p class="paragraph primary-color mt10">Partner</p>
@@ -600,7 +546,7 @@
       <div class="col-6 mt40 flex">
         <div class="team-card flex flex-column center-vertical center-horizontal w100">
           <div class="user-image mb20"
-            style='background-image: url("images/588b64a6-85f5-4216-9ed3-122cb260af6f.png");'></div>
+            style='background-image: url("images/t_rolin.jpeg");'></div>
           <div>
             <b class="bold primary-color">Thomas Rolin</b>
             <p class="paragraph primary-color mt10">Partner</p>
