New signup form

--- a/index.html
+++ b/index.html
@@ -520,7 +520,10 @@
 
   <section id="feature-2" class="section custom-color-d1f5c473-4b9d-1e0f-d451-e0021a4d23d0" activepage="Landing">
     <div class="container-lrg flex">
-      <div class="col-6 flex center-horizontal center-vertical">
+      <div class="col-6 flex-column center-horizontal center-vertical">
+        <h1 class="heading-sml primary-color mb50">
+          Få en investor præsentation
+        </h1>
         <div class="launchaco-builder-hoverable">
           <div class="">
             <img src="images/5f181c41381259aaf3731de3_neofcvvpgcato72pe8iz.jpeg" alt="Screenshot of small App"
@@ -529,28 +532,62 @@
         </div>
       </div>
       <div class="flex col-6 flex-column mobile-text-center center-vertical">
-        <h3 class="bold primary-color">
-          Seniorboliger
-        </h3>
-        <p class="paragraph secondary-color">
-          Visionen er at skabe et bofællesskab for seniorer, hvor der er plads til det gode liv. Den danner i sig selv
-          et lille landsbymiljø, hvor der er muligheder for fælles faciliteter og aktiviteter.
-          <br /><br />
-          Indtast din mail og bliv opdateret hver gang der kommer nyt.
-          <!-- <b><a href="mailto:hello@bricksassetmanagement.com">hello@bricksassetmanagement.com</a></b> -->
           <div class="mt40">
-            <form
-              action="https://fundbricks.us18.list-manage.com/subscribe/post?u=012af4104c16ff7433b941f61&amp;id=a71ffaf85b&SIGNUP=BamLandingPage"
-              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
-              novalidate="novalidate" class="container-sml mailchimp flex mb20">
-              <input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Indtast din email..."
-                required="required" class="mailchimp-input mobile-text-center" />
-              <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                <input type="text" name="b_012af4104c16ff7433b941f61_a71ffaf85b" tabindex="-1" value="" />
-              </div>
-              <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                class="white-color button no-max-width accent-bg button__white" value="Tilmeld" />
+            <!-- Begin Mailchimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="https://bricksassetmanagement.us4.list-manage.com/subscribe/post?u=452191bd7c1688ab3c67a3fbd&amp;id=97a91270c6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+              
+            <div class="mc-field-group container-sml mailchimp flex mb20">
+              <input type="text" value="" name="FNAME" class="mailchimp-input mobile-text-center" id="mce-FNAME" placeholder="Indtast dit fornavn...">
+            </div>
+            <div class="mc-field-group container-sml mailchimp flex mb20">
+              <input type="text" value="" name="LNAME" class="mailchimp-input mobile-text-center" id="mce-LNAME" placeholder="Indtast dit efternavn...">
+            </div>
+            <div class="mc-field-group container-sml mailchimp flex mb20">
+              <input type="email" value="" name="EMAIL" class="mailchimp-input mobile-text-center" id="mce-EMAIL" placeholder="Indtast din email...">
+            </div>
+            <div class="mc-field-group container-sml mailchimp flex mb20">
+              <input type="text" name="MMERGE3" value="+45 "class="mailchimp-input mobile-text-center" id="mce-MMERGE3" placeholder="Indtast dit telefonnummer...">
+            </div>
+            <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group mb20">
+                <div class="content__gdpr">
+                  <label> Marketingtilladelser </label>
+                  <p class="mini mt20 gray">
+                    Vælg alle de måder, du gerne vil høre fra Bricks Asset Management: 
+                  </p>
+                    <fieldset class="mc_fieldset gdprRequired mc-field-group border-none" name="interestgroup_field">
+                      <label class="checkbox " for="gdpr_47461">
+                        <input type="checkbox" id="gdpr_47461" name="gdpr[47461]" value="Y" class="av-checkbox gdpr">
+                        <span class="mini mt20 gray">
+                          Email og telefon
+                        </span> 
+                      </label>
+                    </fieldset>
+                    <span class="micro mt20 gray ">
+                      <div class="content__gdprLegal mt20">
+                      Du kan til enhver tid afmelde dig ved at klikke på linket i sidefoden af ​​vores e-mails. Kontakt os for oplysninger om vores fortrolighedspraksis. 
+                    </span>
+                      <span class="micro mt20 gray">
+                        Vi bruger Mailchimp som vores marketingplatform. Ved at klikke nedenfor for at abonnere anerkender du, at dine oplysninger overføres til Mailchimp til behandling. <a href="https://mailchimp.com/legal/" target="_blank"> Få flere oplysninger om Mailchimp's fortrolighedspraksis her. </a> 
+                      </span>
+                    </div>
+                  </div>
+            </div>
+              <div id="mce-responses " class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_452191bd7c1688ab3c67a3fbd_97a91270c6" tabindex="-1" value=""></div>
+                <div class="clear">
+                  <input type="submit" name="subscribe" id="mc-embedded-subscribe"
+                  class="white-color button no-max-width accent-bg button__white" value="Tilmeld" />
+                </div>
+                </div>
             </form>
+            </div>
+            
+            <!--End mc_embed_signup-->
           </div>
         </p>
       </div>
