--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <a href="#features" class="nav-link secondary-color mr0">Fordele</a>
             <a href="#fonde" class="nav-link secondary-color mr0">Fonde</a>
             <a href="#team" class="nav-link secondary-color mr0">Om os</a>
-            <a href="#cta-7" class="nav-link secondary-color mr0">Kontakt</a>
+            <a href="#cta-7" class="nav-link secondary-color mr0 button secondary-bg" style="color: #ffffff">Kom igang</a>
           </div>
         </div>
       </div>
@@ -517,7 +517,7 @@
   <!-- ================================== -->
   <!-- ================================== -->
 
-
+  <a id="cta-7"></a>
   <section id="feature-2" class="section custom-color-d1f5c473-4b9d-1e0f-d451-e0021a4d23d0" activepage="Landing">
     <div class="container-lrg flex">
       <div class="col-6 flex-column center-horizontal center-vertical">
@@ -526,7 +526,7 @@
         </h1>
         <div class="launchaco-builder-hoverable">
           <div class="">
-            <img src="images/5f181c41381259aaf3731de3_neofcvvpgcato72pe8iz.jpeg" alt="Screenshot of small App"
+            <img src="images/investorpres.png" alt="Screenshot of small App"
               class="custom-img" />
           </div>
         </div>
@@ -553,13 +553,14 @@
             <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group mb20">
                 <div class="content__gdpr">
                   <label> Marketingtilladelser </label>
-                  <p class="mini mt20 gray">
+                  <p class="mini mt20 gray mb10">
                     Vælg alle de måder, du gerne vil høre fra Bricks Asset Management: 
                   </p>
+                  
                     <fieldset class="mc_fieldset gdprRequired mc-field-group border-none" name="interestgroup_field">
                       <label class="checkbox " for="gdpr_47461">
                         <input type="checkbox" id="gdpr_47461" name="gdpr[47461]" value="Y" class="av-checkbox gdpr">
-                        <span class="mini mt20 gray">
+                        <span class="mini gray">
                           Email og telefon
                         </span> 
                       </label>
@@ -579,9 +580,9 @@
                 <div class="response" id="mce-success-response" style="display:none"></div>
               </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_452191bd7c1688ab3c67a3fbd_97a91270c6" tabindex="-1" value=""></div>
-                <div class="clear">
+                <div class="clear menu">
                   <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-                  class="white-color button no-max-width accent-bg button__white" value="Tilmeld" />
+                  class="white-color button no-max-width accent-bg button__white" value="Hent præsentation nu" />
                 </div>
                 </div>
             </form>
@@ -688,32 +689,6 @@
     </div>
   </section>
   
-  <a id="cta"></a>
-  <section id="cta-7" class="section custom-color-d1f5c473-4b9d-1e0f-d451-e0021a4d23d0" activepage="Landing">
-    <div class="container text-center">
-      <div class="col-12">
-        <h4 class="heading-lrg primary-color">Interesseret?</h4>
-        <p class="paragraph mt20 secondary-color mt20">
-          Indtast din email nedenfor og vi vil kontakte dig med mere
-          information om aktuelle og kommende fonde og investeringsrunder.
-        </p>
-        <div class="mt40">
-          <form
-            action="https://bricksassetmanagement.us4.list-manage.com/subscribe/post?u=452191bd7c1688ab3c67a3fbd&amp;amp;id=97a91270c6"
-            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
-            novalidate="novalidate" class="container-sml mailchimp flex mb20">
-            <input type="email" value="" name="EMAIL" id="mce-EMAIL" placeholder="Indtast din email..."
-              required="required" class="mailchimp-input mobile-text-center" />
-            <div aria-hidden="true" style="position: absolute; left: -5000px;">
-              <input type="text" name="b_3198ee66c8baf4d60aa2fee6b_d60e1830e8" tabindex="-1" value="" />
-            </div>
-            <input type="submit" name="subscribe" id="mc-embedded-subscribe"
-              class="white-color button no-max-width accent-bg button__white" value="Tilmeld" />
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
   <footer id="footer-8" class="section text-center custom-color-5babc84d-3c92-5fa8-8ea0-13d1da0d583e"
     activepage="Landing">
     <div class="container col-12">
