--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Bricks Asset Management</title>
+  <title>Bricks Asset Management | Her får du mere ud af din formue</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta property="og:image" content="" />
   <meta name="theme-color" content="#2e8ffa" />
+  <meta property="og:image" content="https://res.cloudinary.com/dhmx9ozrh/image/upload/v1606474127/investorpres_bk2l9v.png" />
   <meta property="og:site_name" content="Bricks Asset Management" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
