--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
             Udlån sker primært til ejendomsprojekter som lanceres på crowdlending platformen FundBricks.com. Via FundBricks.com får Selskabet adgang til allerede screenede ejendomsprojekter og med god sikkerhedsstruktur – fonden får tinglyst ejendomspant i alle de ejendomsprojekter, som der udlånes til. 
           </p>
           <p class="paragraph mt20 gray">
-            Vil du vide mere om dine muligheder for at opnå et højt, stabilt afkast gennem investering i denne fond, kan du downloade vores investorpræsentation med at klikke på [INDSÆT LINK]
+            Vil du vide mere om dine muligheder for at opnå et højt, stabilt afkast gennem investering i denne fond, kan du downloade vores investorpræsentation med at udfylde formularen. 
           </p>
         </div>
       </div>
