--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 
 <head>
-  <title>Bricks Asset Management | Her får du mere ud af din formue</title>
+  <title>Fundbricks Asset Management | Her får du mere ud af din formue</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#2e8ffa" />
   <meta property="og:image" content="https://res.cloudinary.com/dhmx9ozrh/image/upload/v1606474127/investorpres_bk2l9v.png" />
-  <meta property="og:site_name" content="Bricks Asset Management" />
+  <meta property="og:site_name" content="Fundbricks Asset Management" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:description"
-    content="Bricks Asset Management forvalter alternative investeringsfonde med særlig ekspertise indenfor etablering og forvaltning af investeringsfonde, som investerer i fast ejendom og byggefinansiering." />
+    content="Fundbricks Asset Management forvalter alternative investeringsfonde med særlig ekspertise indenfor etablering og forvaltning af investeringsfonde, som investerer i fast ejendom og byggefinansiering." />
   <meta name="description"
-    content="Bricks Asset Management forvalter alternative investeringsfonde med særlig ekspertise indenfor etablering og forvaltning af investeringsfonde, som investerer i fast ejendom og byggefinansiering." />
+    content="Fundbricks Asset Management forvalter alternative investeringsfonde med særlig ekspertise indenfor etablering og forvaltning af investeringsfonde, som investerer i fast ejendom og byggefinansiering." />
   <meta property="og:url" content="https://www.bricksassetmanagement.com" />
   <meta property="og:image" content="https://www.bricksassetmanagement.com/images/bam-open-graph.png?v=1" />
   <meta property="og:image:secure_url" content="https://www.bricksassetmanagement.com/images/bam-open-graph.png?v=1" />
@@ -324,7 +324,7 @@
     <header class="header">
       <div class="container-lrg">
         <div class="flex col-12 spread">
-          <a class="logo logo__black"><img src="images/logo_bam.svg" alt="Bricks Asset ManagementCompany Logo" /></a>
+          <a class="logo logo__black"><img src="images/fbam-long.svg" alt="Fundbricks Asset ManagementCompany Logo" /></a>
 
           <div class="menu">
             <a href="#features" class="nav-link secondary-color mr0">Fordele</a>
@@ -342,7 +342,7 @@
             Her får du mere ud af din formue - vi giver renterne tilbage til investorerne.
           </h1>
           <p class="span secondary-color mt20">
-            Bricks Asset Management indgår i Bricks Holding koncernen, som beskæftiger sig med finansiering og udvikling af ejendomsprojekter i Danmark, med fokus på boligejendomme i store og mellemstore danske byer, hvor der er efterspørgsel på flere og/eller mere moderne boliger, herunder seniorboligfællesskaber og ungdomsboliger.
+            Fundbricks Asset Management indgår i Bricks Holding koncernen, som beskæftiger sig med finansiering og udvikling af ejendomsprojekter i Danmark, med fokus på boligejendomme i store og mellemstore danske byer, hvor der er efterspørgsel på flere og/eller mere moderne boliger, herunder seniorboligfællesskaber og ungdomsboliger.
           </p>
           <p class="span secondary-color mt20">
             Investeringer via Bricks selskaberne har til formål at tilbyde et alternativ eller et supplement til din nuværende investeringsportefølje. Vi tilbyder at forrente din investering med en fornuftig rente og relativ kort løbetid. Hent investor præsentationen via fanebladet øverst ”fonde” eller benyt kontakt fanen for yderligere information. 
@@ -378,7 +378,7 @@
         </p>
         <br/>
         <p class="paragraph gray">
-          Bricks Asset Management er registreret hos Finanstilsynet FT nr. 23182, som forvalter af alternative investeringsfonde (FAIF) og med særlig ekspertise indenfor etablering og forvaltning af investeringsfonde, som investerer i fast ejendom og byggefinansiering.
+          Fundbricks Asset Management er registreret hos Finanstilsynet FT nr. 23182, som forvalter af alternative investeringsfonde (FAIF) og med særlig ekspertise indenfor etablering og forvaltning af investeringsfonde, som investerer i fast ejendom og byggefinansiering.
         </p>
         <br/>
         <p class="paragraph gray">
@@ -415,7 +415,7 @@
           </svg></i>
         <h3 class="bold primary-color">Højt afkast, kort løbetid og god sikkerhed</h3>
         <p class="paragraph secondary-color">
-          Bricks Asset Management etablerer og forvalter alternative investeringsfonde, som finansierer og investerer i solide danske ejendomsprojekter. Fondene rejser kapital via udstedelse af konvertible obligationer med en høj, fast rente på 7% p.a. 
+          Fundbricks Asset Management etablerer og forvalter alternative investeringsfonde, som finansierer og investerer i solide danske ejendomsprojekter. Fondene rejser kapital via udstedelse af konvertible obligationer med en høj, fast rente på 7% p.a. 
         </p>
         <br/>
         <p class="paragraph secondary-color">
@@ -430,7 +430,7 @@
           </svg></i>
         <h3 class="bold primary-color">Risikospredning</h3>
         <p class="paragraph secondary-color">
-          Investering i en af Bricks Asset Managements fonde giver investor mulighed for at sprede sin risiko i forhold til investering i eksempelvis aktier og statsobligationer, samtidig med at investor opnår et højt fast afkast. Endvidere opnår investor risikospredning ved, at fondene udlåner til en række solide danske ejendoms-projekter og dermed spredes fondens risiko på flere ejendomsprojekter. 
+          Investering i en af Fundbricks Asset Managements fonde giver investor mulighed for at sprede sin risiko i forhold til investering i eksempelvis aktier og statsobligationer, samtidig med at investor opnår et højt fast afkast. Endvidere opnår investor risikospredning ved, at fondene udlåner til en række solide danske ejendoms-projekter og dermed spredes fondens risiko på flere ejendomsprojekter. 
         </p>
         <br/>
         <p class="paragraph secondary-color">
@@ -485,7 +485,7 @@
             Fonde
           </h1>
           <p class="paragraph mt20 gray">
-            Bricks Asset Management fokuserer udelukkende på etablering og forvaltning af fonde baseret på fast ejendom og med særlig fokus på byggekreditfonde, som udlåner kapital til solide ejendomsudviklingsprojekter indenfor enkeltstående boliger og boligejendomme
+            Fundbricks Asset Management fokuserer udelukkende på etablering og forvaltning af fonde baseret på fast ejendom og med særlig fokus på byggekreditfonde, som udlåner kapital til solide ejendomsudviklingsprojekter indenfor enkeltstående boliger og boligejendomme
           </p>
           <p class="paragraph mt20 gray">
             Fondene henvender sig udelukkende til ”professionelle” og ”semi-professionelle” investorer og  vil derfor have en minimumstegning på 100.000 EUR eller mere.
@@ -554,7 +554,7 @@
                 <div class="content__gdpr">
                   <label> Marketingtilladelser </label>
                   <p class="mini mt20 gray mb10">
-                    Vælg alle de måder, du gerne vil høre fra Bricks Asset Management: 
+                    Vælg alle de måder, du gerne vil høre fra Fundbricks Asset Management: 
                   </p>
                   
                     <fieldset class="mc_fieldset gdprRequired mc-field-group border-none" name="interestgroup_field">
@@ -608,7 +608,7 @@
     <div class="container text-center mb35">
       <h3 class="heading primary-color">Erfarent Management Team</h3>
       <p class="paragraph secondary-color" style="color: #202020">
-        Bricks Asset Management ledes og drives i det daglige af et meget erfarent management team bestående af 4 seniorprofiler med tilsammen mere end 100 års erfaring indenfor ejendomme, finansiering, jura, bank, investeringsrådgivning, compliance, formidling og forvaltning af investeringer og investeringsfonde. 
+        Fundbricks Asset Management ledes og drives i det daglige af et meget erfarent management team bestående af 4 seniorprofiler med tilsammen mere end 100 års erfaring indenfor ejendomme, finansiering, jura, bank, investeringsrådgivning, compliance, formidling og forvaltning af investeringer og investeringsfonde. 
       </p>
       <br/>
       <p class="paragraph secondary-color" style="color: #202020">
@@ -701,7 +701,7 @@
       </div>
       <div class="mt50">
         <p class="span secondary-color">
-          Bricks Asset Management APS
+          Fundbricks Asset Management ApS
         </p>
         <p class="span secondary-color">
           Århusgade 88, 3., 2100 Copenhagen
