Edit phone and emails

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     content="Fundbricks Asset Management forvalter alternative investeringsfonde med særlig ekspertise indenfor etablering og forvaltning af investeringsfonde, som investerer i fast ejendom og byggefinansiering." />
   <meta name="description"
     content="Fundbricks Asset Management forvalter alternative investeringsfonde med særlig ekspertise indenfor etablering og forvaltning af investeringsfonde, som investerer i fast ejendom og byggefinansiering." />
-  <meta property="og:url" content="https://www.bricksassetmanagement.com" />
-  <meta property="og:image" content="https://www.bricksassetmanagement.com/images/bam-open-graph.png?v=1" />
-  <meta property="og:image:secure_url" content="https://www.bricksassetmanagement.com/images/bam-open-graph.png?v=1" />
+  <meta property="og:url" content="https://www.fbam.dk" />
+  <meta property="og:image" content="https://www.fbam.dk/images/bam-open-graph.png?v=1" />
+  <meta property="og:image:secure_url" content="https://www.fbam.dk/images/bam-open-graph.png?v=1" />
   <link rel="shortcut icon" href="images/favicon.ico" />
 
   <link rel="stylesheet" href="css/main.css" />
@@ -399,7 +399,7 @@
         <br/>
         <p class="paragraph gray">
           Kontakt os for mere information på <br/>
-          <b><a href="mailto:hello@bricksassetmanagement.com">hello@bricksassetmanagement.com</a></b>        </p>
+          <b><a href="mailto:hello@fbam.dk">hello@fbam.dk</a></b>        </p>
         </p>
       </div>
     </div>
@@ -629,7 +629,7 @@
             </p>
           </div>
           <div class="mt30">
-            <a href="mailto:tr@bricksassetmanagement.com" class="socialicons accent-bg email"></a><a
+            <a href="mailto:tr@fbam.dk" class="socialicons accent-bg email"></a><a
               href="https://linkedin.com/thomas-rolin" target="_blank" class="socialicons accent-bg linkedin"></a>
           </div>
         </div>
@@ -646,8 +646,9 @@
             </p>
           </div>
           <div class="mt30">
-            <a href="mailto:rb@bricksassetmanagement.com" class="socialicons accent-bg email"></a><a
-              href="https://www.linkedin.com/in/rasmus-birkvig/" target="_blank" class="socialicons accent-bg linkedin"></a>
+            <a href="mailto:rb@fbam.dk" class="socialicons accent-bg email"></a>
+            <a href="Tel:+4530504313" class="socialicons accent-bg phone"></a>
+            <a href="https://www.linkedin.com/in/rasmus-birkvig/" target="_blank" class="socialicons accent-bg linkedin"></a>
           </div>
         </div>
       </div>
@@ -663,7 +664,7 @@
             </p>
           </div>
           <div class="mt30">
-            <a href="mailto:tss@bricksassetmanagement.com" class="socialicons accent-bg email"></a><a
+            <a href="mailto:tss@fbam.dk" class="socialicons accent-bg email"></a><a
               href="https://linkedin.com/thomas-sonne-schmidt/" target="_blank"
               class="socialicons accent-bg linkedin"></a>
           </div>
@@ -681,7 +682,7 @@
             </p>
           </div>
           <div class="mt30">
-            <a href="mailto:re@bricksassetmanagement.com" class="socialicons accent-bg email"></a><a
+            <a href="mailto:re@fbam.dk" class="socialicons accent-bg email"></a><a
               href="https://www.linkedin.com/in/robin-eriksen-6a640a5/" target="_blank" class="socialicons accent-bg linkedin"></a>
           </div>
         </div>
@@ -697,7 +698,7 @@
           class="socialicons accent-bg linkedin"></a>
         <a href="https://facebook.com/bricksassetmanagement" target="_blank" rel="noopener noreferrer"
           class="socialicons accent-bg facebook"></a>
-        <a href="mailto:hello@bricksassetmanagement.com" class="socialicons accent-bg email"></a>
+        <a href="mailto:hello@fbam.dk" class="socialicons accent-bg email"></a>
       </div>
       <div class="mt50">
         <p class="span secondary-color">
@@ -708,7 +709,7 @@
         </p>
         <br/>
         <p class="span secondary-color">
-          hello@bricksassetmanagement.com
+          hello@fbam.dk
         </p>
         <br/>
         <p class="span secondary-color">
