--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#2e8ffa" />
-  <meta property="og:image"
-    content="https://res.cloudinary.com/dhmx9ozrh/image/upload/v1606474127/investorpres_bk2l9v.png" />
+  <meta property="og:image" content="https://res.cloudinary.com/fundbricks/image/upload/v1618486694/u8kdh5yljhdilfjzty0m.png" />
   <meta property="og:site_name" content="Fundbricks Asset Management" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
